[build-system]
requires = ["setuptools>=63.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nostream_exporter"
version = "0.0.2"
description = "Devops monitoring tool for Nostream"
readme = "README.md"
authors = [{ name = "blee", email = "blee@bitcoiner.social" }]
license = { file = "LICENSE" }
keywords = ["nostream"]
dependencies = [
    'build>=0.8.0',
    'prometheus_client>=0.16.0',
    'psycopg2>=2.9.5',
]
requires-python = '>=3.10.0'
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: Apache Software License",    
]

[project.urls]
Homepage = "https://github.com/bleetube/nostream_exporter"

# https://setuptools.pypa.io/en/latest/userguide/entry_point.html
[project.scripts]
nostream_exporter = "nostream_exporter.collector:main"